Renamed current widget to clockface_81

--- a/EclipseWS/Clockface/AndroidManifest.xml
+++ b/EclipseWS/Clockface/AndroidManifest.xml
@@ -26,23 +26,23 @@
         </activity>
         
         
-        <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_2_2" android:label="@string/clockface_2_2" >
+        <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_81_2_2" android:label="@string/clockface_81_2_2" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 		        <action android:name="ru.pvolan.clockface.TICK_WIDGET_UPDATE" /><!-- Duplicated in ClockfaceWidgetProvider -->
 		    </intent-filter>
 		    <meta-data android:name="android.appwidget.provider"
-		               android:resource="@xml/clockface_widget_info_2_2" />
+		               android:resource="@xml/clockface_widget_info_81_2_2" />
 		</receiver>
 		
         
-        <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_3_3" android:label="@string/clockface_3_3" >
+        <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_81_3_3" android:label="@string/clockface_81_3_3" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
 		        <action android:name="ru.pvolan.clockface.TICK_WIDGET_UPDATE" /><!-- Duplicated in ClockfaceWidgetProvider -->
 		    </intent-filter>
 		    <meta-data android:name="android.appwidget.provider"
-		               android:resource="@xml/clockface_widget_info_3_3" />
+		               android:resource="@xml/clockface_widget_info_81_3_3" />
 		</receiver>
         
     </application>
