--- a/EclipseWS/Clockface/AndroidManifest.xml
+++ b/EclipseWS/Clockface/AndroidManifest.xml
@@ -26,6 +26,17 @@
         </activity>
         
         
+        
+        <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_classic_4_4" android:label="@string/clockface_classic_4_4" >
+		    <intent-filter>
+		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+		        <action android:name="ru.pvolan.clockface.TICK_WIDGET_UPDATE" /><!-- Duplicated in ClockfaceWidgetProvider -->
+		    </intent-filter>
+		    <meta-data android:name="android.appwidget.provider"
+		               android:resource="@xml/clockface_widget_info_classic_4_4" />
+		</receiver>
+        
+        
         <receiver android:name="ru.pvolan.clockface.ClockfaceWidgetProvider_81_2_2" android:label="@string/clockface_81_2_2" >
 		    <intent-filter>
 		        <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
