--- a/EclipseWS/Clockface/AndroidManifest.xml
+++ b/EclipseWS/Clockface/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -15,6 +18,8 @@
         android:theme="@style/AppTheme" 
         android:name="ru.pvolan.clockface.ClockfaceApp"
         >
+        
+        
         <activity
             android:name="ru.pvolan.clockface.SetupActivity"
             android:label="@string/app_name" >
